# order-management-system

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  entrypoint.sh  oms.postman_collection.json  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/analytics/: handlers.py  routes.py  schemas.py
app/api/v1/orders/: handlers.py  routes.py  schemas.py
app/core/: cache.py  celery.py  config.py  database.py  logger.py
app/domains/analytics/: models.py  repository.py  service.py  tasks.py
app/domains/orders/: models.py  repository.py  service.py
migrations/orders/: 0_20250413085754_init.py
monitoring/: prometheus.yml
monitoring/grafana-dashboards/: fastapi-dashboard.json
openapi/v1/: analytics.yaml  orders.yaml
scripts/: seed_data.py
tests/: conftest.py
tests/integration/api/v1/orders/: test_orders.py
